@@ -18,5 +18,6 @@ $Test::Harness::verbose = delete $opts{'v'};
 $ENV{TEST_PROG_ARGS} = join(' ', map { "-$_" } keys %opts );
 
 # Pass in a list of tests to run on the command line, else run all the tests.
-my @tests = @ARGV ? @ARGV : grep !m{^t/parser/}, glob( "t/*/*.t" );
+my @tests = @ARGV ? @ARGV : grep !m{^t/parser/}, 
+    glob( "t/*/*.t t/*/*/*.t t/*/*/*/*.t" );
 runtests(@tests);
